--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
         </div>
    <center>         
        <br>
-  <a href="https://t.me/MOHAMMADALAMINHOSENBIJOY" target="_blank" rel="noopener noreferrer" class="telegram-link">
-          <img src="Telegram-Logo.png" alt="Telegram Logo" height="20" width="20">MOHAMMAD ALAMIN HOSEN BIJOY
+  <a href="https://t.me/TG_MOHAMMAD_ALAMIN" target="_blank" rel="noopener noreferrer" class="telegram-link">
+          <img src="Telegram-Logo.png" alt="Telegram Logo" height="20" width="20">MOHAMMAD ALAMIN
         </a>
-        <p>&copy;2025 &bull; MOHAMMAD ALAMIN HOSEN BIJOY &bull; All rights reserved. </p>
+        <p>&copy;2025 &bull; MOHAMMAD ALAMIN &bull; All rights reserved. </p>
   </center>
         </div>
 <script src="cc-generator.js"></script>
