--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <nav class="navigations">
 <span style="color:#fff; font-size: 20px; font-weight: bold;"><spm>CC GENERATOR</spm></span>
 </nav>
-<marquee behavior="5" direction="1">RE-DESING BY MOHAMMAD ALAMIN HOSEN BIJOY</marquee>
+<marquee behavior="5" direction="1">RE-DESING BY MOHAMMAD ALAMIN</marquee>
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
