--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="robots" content="index, follow">
   <meta name="language" content="English">
-  <meta name="author" content="MOHAMMAD ALAMIN HOSEN BIJOY">
+  <meta name="author" content="MOHAMMAD ALAMIN">
   <meta name="title" content="CREDIT CARD GENERATOR">
   <meta name="description" content="cc Generator. Free Credit Card Numbers.">
   <meta property="og:image" content="https://i.postimg.cc/gJcqYC4Z/Cc.png">
@@ -65,7 +65,7 @@
         </div>
    <center>         
        <br>
-  <a href="https://t.me/TG_MOHAMMAD_ALAMIN" target="_blank" rel="noopener noreferrer" class="telegram-link">
+  <a href="https://t.me/ALAMIN2K07" target="_blank" rel="noopener noreferrer" class="telegram-link">
           <img src="Telegram-Logo.png" alt="Telegram Logo" height="20" width="20">MOHAMMAD ALAMIN
         </a>
         <p>&copy;2025 &bull; MOHAMMAD ALAMIN &bull; All rights reserved. </p>
